--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "jest",
-    "watch": "jest --watch *.test.js"
+    "watch": "jest --watch gameboard.test.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
   },
+  "type": "module",
   "babel": {
     "presets": [
       [
